force-app/main/default/objects/TimeSheetEntry/fields/FSM_AdjustedTimeDuration__c.field-meta.xml
<CustomField>
    <fullName>FSM_AdjustedTimeDuration__c</fullName>
    <description>Created as a part of SFI-1557</description>
    <label>Adjusted Time Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>