force-app/main/default/objects/TimeSheetEntry/fields/FSM_FinalConfirmation__c.field-meta.xml
<CustomField>
    <fullName>FSM_FinalConfirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as a part of SFI-1557</description>
    <label>Final Confirmation</label>
    <type>Checkbox</type>
</CustomField>