force-app/main/default/objects/TimeSheetEntry/fields/FSM_NonProductiveReason__c.field-meta.xml
<CustomField>
    <fullName>FSM_NonProductiveReason__c</fullName>
    <description>Created as a part of SFI-1927</description>
    <label>Non Productive Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EF</fullName>
                <label>2nd line assurance audit</label>
            </value>
            <value>
                <fullName>VB</fullName>
                <label>Breakdown</label>
            </value>
            <value>
                <fullName>OTRE</fullName>
                <label>Waiting second resource</label>
            </value>
            <value>
                <fullName>ENV</fullName>
                <label>Environmental issue</label>
            </value>
            <value>
                <fullName>H&amp;S</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>AW</fullName>
                <label>Adverse weather conditions</label>
            </value>
            <value>
                <fullName>SNR</fullName>
                <label>Further Investigation</label>
            </value>
            <value>
                <fullName>SV</fullName>
                <label>Team manager audit</label>
            </value>
            <value>
                <fullName>OTNC</fullName>
                <label>Waiting for Shut Reactive</label>
            </value>
            <value>
                <fullName>OTSH</fullName>
                <label>Waiting for work</label>
            </value>
            <value>
                <fullName>OTWC</fullName>
                <label>Waiting for customer</label>
            </value>
            <value>
                <fullName>SPPU</fullName>
                <label>Travel for Fittings/Tools</label>
            </value>
            <value>
                <fullName>PLDI</fullName>
                <label>Travel for Digger</label>
            </value>
            <value>
                <fullName>PLTL</fullName>
                <label>Travel for Lights</label>
            </value>
            <value>
                <fullName>SPBA</fullName>
                <label>Waiting for Barriers</label>
            </value>
            <value>
                <fullName>IF</fullName>
                <label>Post/Pole removal</label>
            </value>
            <value>
                <fullName>P/A</fullName>
                <label>Cars blocking access</label>
            </value>
            <value>
                <fullName>TMPE</fullName>
                <label>Waiting for Highways</label>
            </value>
            <value>
                <fullName>TMRE</fullName>
                <label>Waiting for Reinstatement</label>
            </value>
            <value>
                <fullName>TMTM</fullName>
                <label>Incorrect TM taken</label>
            </value>
            <value>
                <fullName>TMTL</fullName>
                <label>Waiting for TM</label>
            </value>
            <value>
                <fullName>WGOT</fullName>
                <label>Waiting for Grab</label>
            </value>
            <value>
                <fullName>WGSR</fullName>
                <label>Travel for barriers</label>
            </value>
            <value>
                <fullName>WDST</fullName>
                <label>No Resource available</label>
            </value>
            <value>
                <fullName>WDFR</fullName>
                <label>Waiting for Re-trace</label>
            </value>
            <value>
                <fullName>WDWI</fullName>
                <label>Waiting for Shut planned</label>
            </value>
            <value>
                <fullName>IPD</fullName>
                <label>Utility plans</label>
            </value>
            <value>
                <fullName>TMA</fullName>
                <label>Incorrect TM Plan</label>
            </value>
            <value>
                <fullName>WTP</fullName>
                <label>Waiting for Post removal</label>
            </value>
            <value>
                <fullName>WP</fullName>
                <label>Waiting for fittings/Tools</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>