force-app/main/default/objects/TimeSheetEntry/fields/FSM_ServiceAppointmentId__c.field-meta.xml
<CustomField>
    <fullName>FSM_ServiceAppointmentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as a part of SFI-1557</description>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Time Sheet Entries</relationshipLabel>
    <relationshipName>TimeSheetEntries</relationshipName>
    <type>Lookup</type>
</CustomField>