force-app/main/default/objects/TimeSheetEntry/fields/FSM_ServiceResource__c.field-meta.xml
<CustomField>
    <fullName>FSM_ServiceResource__c</fullName>
    <description>SFL-887</description>
    <formula>TimeSheet.ServiceResource.Name</formula>
    <label>Service Resource</label>
    <type>Text</type>
</CustomField>