force-app/main/default/objects/TimeSheetEntry/fields/FSM_TimeDuration__c.field-meta.xml
<CustomField>
    <fullName>FSM_TimeDuration__c</fullName>
    <description>Created as a part of SFI-1557</description>
    <formula>IF(NOT((ISNULL(FSM_AdjustedTimeDuration__c )||FSM_AdjustedTimeDuration__c==0)) ,FSM_AdjustedTimeDuration__c, FLOOR((EndTime-StartTime) * 24 * 60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>